--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainForecastActivity"
+            android:name=".view.MainForecastActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +19,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailActivity"
+            android:name=".view.DetailActivity"
             android:label="@string/title_activity_detail"
-            android:parentActivityName=".MainForecastActivity" >
+            android:parentActivityName=".view.MainForecastActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainForecastActivity" />
+                android:value=".view.MainForecastActivity" />
         </activity>
     </application>
 
