--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,10 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:title="@string/app_name"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".view.MainForecastActivity"
-            android:label="@string/app_name" >
+            android:name=".view.MainForecastActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +27,7 @@
         </activity>
         <activity
             android:name=".view.SettingsDetailActivity"
-            android:title="@string/title_activity_settings_detail"
+            android:label="@string/title_activity_settings_detail"
             android:parentActivityName=".view.DetailActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
