--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+				<action android:name="android.intent.action.view"/>
+				<data android:scheme="geo"/>
             </intent-filter>
         </activity>
         <activity
