--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,40 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hally.sunshine" >
+<manifest package="com.hally.sunshine"
+		  xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.INTERNET"/>
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".view.MainForecastActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application
+		android:allowBackup="true"
+		android:icon="@mipmap/ic_launcher"
+		android:label="@string/app_name"
+		android:theme="@style/AppTheme">
+		<activity
+			android:name=".view.MainForecastActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.LAUNCHER"/>
 				<action android:name="android.intent.action.view"/>
 				<data android:scheme="geo"/>
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".view.DetailActivity"
-            android:label="@string/title_activity_detail"
-            android:parentActivityName=".view.MainForecastActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.MainForecastActivity" />
-        </activity>
-        <activity
-            android:name=".view.SettingsDetailActivity"
-            android:label="@string/title_activity_settings_detail"
-            android:parentActivityName=".view.DetailActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.MainForecastActivity" />
-        </activity>
-    </application>
+			</intent-filter>
+		</activity>
+		<!-- Without @style/Theme.AppCompat.Light you will not see Share menuItem!-->
+		<activity
+			android:name=".view.DetailActivity"
+			android:label="@string/title_activity_detail"
+			android:parentActivityName=".view.MainForecastActivity"
+			android:theme="@style/Theme.AppCompat.Light">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".view.MainForecastActivity"/>
+		</activity>
+		<activity
+			android:name=".view.SettingsDetailActivity"
+			android:label="@string/title_activity_settings_detail"
+			android:parentActivityName=".view.DetailActivity">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value=".view.MainForecastActivity"/>
+		</activity>
+	</application>
 
 </manifest>
