Issue #9 - Lesson 4B - implemented buildUriMatcher(), added registered contentProvider in manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".view.MainForecastActivity"/>
 		</activity>
+
+		<provider android:name=".data.WeatherProvider" android:authorities="com.hally.sunshine"/>
+
 	</application>
 
 </manifest>
