--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
 	<application
 		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
+		android:icon="@mipmap/art_clear"
+		android:logo="@mipmap/ic_logo"
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme">
 		<activity
