Issue #19 - Lesson6: created SunshineService, removed CircleCustomView from fragment_detail, removed FetcWeatherTask

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
 		</activity>
 
 		<provider android:name=".data.WeatherProvider" android:authorities="com.hally.sunshine"/>
+		<service android:name=".service.SunshineService"/>
 
 	</application>
 
