Issue #19 - Lesson6: alarm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
 
 		<provider android:name=".data.WeatherProvider" android:authorities="com.hally.sunshine"/>
 		<service android:name=".service.SunshineService"/>
+		<receiver android:name=".model.AlarmReceiver" android:enabled="true"/>
 
 	</application>
 
