--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,9 @@ android {
     }
     sourceSets {
         main {
-            res.srcDirs = ['src/main/res', 'src/main/res/drawable', 'src/main/res/drawable-v21', 'src/main/res/values-sw600dp', 'src/main/res/layout-large', 'src/main/res/values-land', 'src/main/res/values-sw600dp-port']
+            res.srcDirs = ['src/main/res', 'src/main/res/drawable', 'src/main/res/drawable-v21',
+                           'src/main/res/layout-sw600dp', 'src/main/res/values-sw600dp',
+                           'src/main/res/values-land', 'src/main/res/values-sw600dp-port', 'src/main/res/layout-large']
         }
     }
 }
