--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,19 @@
 
 	<uses-permission android:name="android.permission.INTERNET"/>
 
+	<!-- Permissions required by the sync adapter -->
+	<uses-permission
+		android:name="android.permission.READ_SYNC_SETTINGS"/>
+	<uses-permission
+		android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+	<uses-permission
+		android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/art_clear"
-		android:logo="@mipmap/ic_logo"
 		android:label="@string/app_name"
+		android:logo="@mipmap/ic_logo"
 		android:theme="@style/AppTheme">
 		<activity
 			android:name=".view.MainForecastActivity"
@@ -42,8 +50,31 @@
 				android:value=".view.MainForecastActivity"/>
 		</activity>
 
-		<provider android:name=".data.WeatherProvider" android:authorities="com.hally.sunshine"/>
+		<provider android:name=".data.WeatherProvider"
+			android:authorities="@string/content_authority"
+			android:exported="false"
+			android:syncable="true"/>
+
 		<service android:name=".service.SunshineService"/>
+
+		<service android:name=".sync.SunshineAuthenticatorService">
+			<intent-filter>
+				<action android:name="android.accounts.AccountAuthenticator"/>
+			</intent-filter>
+			<meta-data
+				android:name="android.accounts.AccountAuthenticator"
+				android:resource="@xml/authenticator"/>
+		</service>
+
+		<service android:name=".sync.SunshineSyncService" android:exported="true">
+			<intent-filter>
+				<action android:name="android.content.SyncAdapter"/>
+			</intent-filter>
+			<meta-data
+				android:name="android.content.SyncAdapter"
+				android:resource="@xml/syncadapter"/>
+		</service>
+
 		<receiver android:name=".model.AlarmReceiver" android:enabled="true"/>
 
 	</application>
