Issue #17: changed ic_logo size, applied new theme (not finished yet)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 		android:theme="@style/AppTheme">
 		<activity
 			android:name=".view.MainForecastActivity"
-			android:theme="@style/Theme.AppCompat.Light">
+			android:theme="@style/ForecastTheme">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
