--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.hally.sunshine"
         minSdkVersion 22
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -24,10 +24,13 @@ android {
                            'src/main/res/values-land', 'src/main/res/values-sw600dp-port', 'src/main/res/layout-large']
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', OPEN_WEATHER_MAP_API_KEY_VALUE
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:22.0.+'
-    compile "com.android.support:appcompat-v7:22.0.+"
+    compile 'com.android.support:support-v4:23.1.1'
+    compile "com.android.support:appcompat-v7:23.1.1"
 }
