--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
 		android:label="@string/app_name"
 		android:theme="@style/SunshineAppTheme">
 		<activity
-			android:name=".view.MainForecastActivity"
-			android:theme="@style/SunshineAppTheme">
+			android:name=".view.MainForecastActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -34,8 +33,7 @@
 		<activity
 			android:name=".view.DetailActivity"
 			android:label="@string/title_activity_detail"
-			android:parentActivityName=".view.MainForecastActivity"
-			android:theme="@style/SunshineAppTheme">
+			android:parentActivityName=".view.MainForecastActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".view.MainForecastActivity"/>
@@ -43,8 +41,7 @@
 		<activity
 			android:name=".view.SettingsActivity"
 			android:label="@string/title_activity_settings_detail"
-			android:parentActivityName=".view.MainForecastActivity"
-			android:theme="@style/SunshineAppTheme">
+			android:parentActivityName=".view.MainForecastActivity">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
 				android:value=".view.MainForecastActivity"/>
