issue#22 - added DatabaseManager activity to test DB on the device (only for debug version)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
 				android:value=".view.MainForecastActivity"/>
 		</activity>
 
+		<activity android:name=".view.AndroidDatabaseManager"
+				  android:theme="@style/Theme.AppCompat.Light"/>
+
 		<provider android:name=".data.WeatherProvider"
 			android:authorities="@string/content_authority"
 			android:exported="false"
