--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:23.1.1'
-    compile "com.android.support:appcompat-v7:23.1.1"
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:support-annotations:23.2.0'
 }
