--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
 	<uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
 	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
+	<!-- Permissions required for Google Cloud Messaging -->
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<permission android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE"
+				android:protectionLevel="signature" />
+	<uses-permission android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE" />
+
 	<application
 		android:supportsRtl="true"
 		android:allowBackup="true"
@@ -71,7 +78,35 @@
 				android:name="android.content.SyncAdapter"
 				android:resource="@xml/syncadapter"/>
 		</service>
-
+		<!-- The Google Cloud Messaging receiver and services -->
+		<receiver
+			android:name="com.google.android.gms.gcm.GcmReceiver"
+			android:exported="true"
+			android:permission="com.google.android.c2dm.permission.SEND" >
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+				<category android:name="com.example.android.sunshine.app" />
+			</intent-filter>
+		</receiver>
+	<!--	<service
+			android:name="gcm.SunshineGcmListenerService"
+			android:exported="false" >
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+			</intent-filter>
+		</service>-->
+		<service
+			android:name="gcm.SunshineInstanceIDListenerService"
+			android:exported="false">
+			<intent-filter>
+				<action android:name="com.google.android.gms.iid.InstanceID"/>
+			</intent-filter>
+		</service>
+		<service
+			android:name=".gcm.RegistrationIntentService"
+			android:exported="false" >
+		</service>
 	</application>
 
 </manifest>
