--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0-beta7'
-        classpath 'com.google.gms:google-services:1.3.0-beta1'
+        classpath 'com.google.gms:google-services:2.1.0-alpha4 '
+        //https://bintray.com/android/android-tools/com.google.gms.google-services/ check
+        // versions here
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
