--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,27 +84,29 @@
 			android:exported="true"
 			android:permission="com.google.android.c2dm.permission.SEND" >
 			<intent-filter>
+				<!-- Receives the actual messages. -->
 				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<!-- Receives the registration id. -->
 				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 				<category android:name="com.example.android.sunshine.app" />
 			</intent-filter>
 		</receiver>
 		<service
-			android:name="gcm.SunshineGcmListenerService"
+			android:name=".gcm.MyGcmListenerService"
 			android:exported="false" >
 			<intent-filter>
 				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
 			</intent-filter>
 		</service>
 		<service
-			android:name="gcm.SunshineInstanceIDListenerService"
+			android:name=".gcm.MyInstanceIDListenerService"
 			android:exported="false">
 			<intent-filter>
 				<action android:name="com.google.android.gms.iid.InstanceID"/>
 			</intent-filter>
 		</service>
 		<service
-			android:name=".gcm.RegistrationIntentService"
+			android:name=".gcm.MyRegistrationIntentService"
 			android:exported="false" >
 		</service>
 	</application>
