--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
 	<!-- Permissions required for Google Cloud Messaging -->
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-	<permission android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE"
+	<permission android:name="com.hally.sunshine.permission.C2D_MESSAGE"
 				android:protectionLevel="signature" />
-	<uses-permission android:name="com.example.android.sunshine.app.permission.C2D_MESSAGE" />
+	<uses-permission android:name="com.hally.sunshine.permission.C2D_MESSAGE" />
 
 	<application
 		android:supportsRtl="true"
@@ -88,7 +88,7 @@
 				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
 				<!-- Receives the registration id. -->
 				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-				<category android:name="com.example.android.sunshine.app" />
+				<category android:name="com.hally.sunshine" />
 			</intent-filter>
 		</receiver>
 		<service
