issue#27 - added a comment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,7 @@
 				android:resource="@xml/syncadapter"/>
 		</service>
 		<!-- The Google Cloud Messaging receiver and services -->
+		<!-- more info https://developers.google.com/cloud-messaging/android/client?configured=false#get-config -->
 		<receiver
 			android:name="com.google.android.gms.gcm.GcmReceiver"
 			android:exported="true"
