--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     compile 'com.android.support:support-annotations:23.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
-
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
